src/objects/JIRA_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>JIRA_Issue__c</referenceTo>
        <relationshipName>Child_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>actual_hours_for_work__c</fullName>
        <label>ACTUAL_HOURS_FOR_WORK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>additional_labels_fixed__c</fullName>
        <label>ADDITIONAL_LABELS_FIXED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affected_versions__c</fullName>
        <label>AFFECTED_VERSIONS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analysis_date__c</fullName>
        <label>ANALYSIS_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>approved_for_auto_sme__c</fullName>
        <label>APPROVED_FOR_AUTO_SME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>assignee__c</fullName>
        <label>ASSIGNEE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>assignee_coreid__c</fullName>
        <label>ASSIGNEE_COREID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>auto_submit_target_branch__c</fullName>
        <label>AUTO_SUBMIT_TARGET_BRANCH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>branch_name__c</fullName>
        <label>BRANCH_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>carrier__c</fullName>
        <label>CARRIER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>changes_merged__c</fullName>
        <label>CHANGES_MERGED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>changes_pushed__c</fullName>
        <label>CHANGES_PUSHED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>component__c</fullName>
        <label>COMPONENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>component_id__c</fullName>
        <label>COMPONENT_ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>component_name__c</fullName>
        <label>COMPONENT_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>current_sme_risk__c</fullName>
        <label>CURRENT_SME_RISK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dark_project__c</fullName>
        <label>DARK_PROJECT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_owners__c</fullName>
        <label>DATA_OWNERS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_closed__c</fullName>
        <label>DATE_CLOSED</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_created__c</fullName>
        <label>DATE_CREATED</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_held__c</fullName>
        <label>DATE_HELD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_integrated__c</fullName>
        <label>DATE_INTEGRATED</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_pending_sme_approval__c</fullName>
        <label>DATE_PENDING_SME_APPROVAL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_postponed__c</fullName>
        <label>DATE_POSTPONED</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_ready__c</fullName>
        <label>DATE_READY</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_reopened__c</fullName>
        <label>DATE_REOPENED</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_res1__c</fullName>
        <label>DATE_RES1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_res2__c</fullName>
        <label>DATE_RES2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_res3__c</fullName>
        <label>DATE_RES3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_sme_approved__c</fullName>
        <label>DATE_SME_APPROVED</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_updated__c</fullName>
        <label>DATE_UPDATED</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_wad_approval__c</fullName>
        <label>DATE_WAD_APPROVAL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_working__c</fullName>
        <label>DATE_WORKING</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dbcreate_time__c</fullName>
        <label>DBCREATE_TIME</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dblast_operation__c</fullName>
        <label>DBLAST_OPERATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbmod_time__c</fullName>
        <label>DBMOD_TIME</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dbres_n1__c</fullName>
        <label>DBRES_N1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dbres_s1__c</fullName>
        <label>DBRES_S1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbstatus_r__c</fullName>
        <label>DBSTATUS_R</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbstatus_t__c</fullName>
        <label>DBSTATUS_T</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>defect_escape_from__c</fullName>
        <label>DEFECT_ESCAPE_FROM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>defect_impact__c</fullName>
        <label>DEFECT_IMPACT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>defect_injection_trigger__c</fullName>
        <label>DEFECT_INJECTION_TRIGGER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>defect_source__c</fullName>
        <label>DEFECT_SOURCE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>defect_source_id__c</fullName>
        <label>DEFECT_SOURCE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>defect_symptom__c</fullName>
        <label>DEFECT_SYMPTOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>defect_type__c</fullName>
        <label>DEFECT_TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dependent_crs__c</fullName>
        <label>DEPENDENT_CRS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>due_date__c</fullName>
        <label>DUE_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>duplicate_cr__c</fullName>
        <label>DUPLICATE_CR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>duplicate_cr_created__c</fullName>
        <label>DUPLICATE_CR_CREATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>duplicate_cr_resolution__c</fullName>
        <label>DUPLICATE_CR_RESOLUTION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eccn__c</fullName>
        <label>ECCN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>export_control_request_id__c</fullName>
        <label>EXPORT_CONTROL_REQUEST_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>export_control_tool_link__c</fullName>
        <label>EXPORT_CONTROL_TOOL_LINK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>export_controlled__c</fullName>
        <label>EXPORT_CONTROLLED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>external_cr__c</fullName>
        <label>EXTERNAL_CR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>failure_mode__c</fullName>
        <label>FAILURE_MODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature_id__c</fullName>
        <label>FEATURE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fix_on_fix__c</fullName>
        <label>FIX_ON_FIX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fix_on_fix_cr__c</fullName>
        <label>FIX_ON_FIX_CR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>flex_version__c</fullName>
        <label>FLEX_VERSION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>forest_name__c</fullName>
        <label>FOREST_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gerrit_project_owner_core_id__c</fullName>
        <label>GERRIT_PROJECT_OWNER_CORE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gerrit_project_request_type__c</fullName>
        <label>GERRIT_PROJECT_REQUEST_TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gerritcommits__c</fullName>
        <label>GERRITCOMMITS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>git_server_pushed_to__c</fullName>
        <label>GIT_SERVER_PUSHED_TO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id_tag__c</fullName>
        <label>ID_TAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inspection_record__c</fullName>
        <label>INSPECTION_RECORD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrate_actual__c</fullName>
        <label>Integrate Actual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrate_cwv__c</fullName>
        <label>Integrate CWV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>intg_bsln__c</fullName>
        <label>Integr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inventory_record_updated__c</fullName>
        <label>INVENTORY_RECORD_UPDATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>issue_link__c</fullName>
        <label>CR Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>issue_status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>issue_subtype__c</fullName>
        <label>Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>issue_type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jira_feature_id__c</fullName>
        <label>JIRA_FEATURE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jira_sta_refresh_time__c</fullName>
        <label>JIRA_STA_REFRESH_TIME</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiraid__c</fullName>
        <externalId>true</externalId>
        <label>JIRAID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>justification__c</fullName>
        <label>JUSTIFICATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lab_course_completion__c</fullName>
        <label>LAB_COURSE_COMPLETION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>label__c</fullName>
        <label>LABEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_comments__c</fullName>
        <label>LAST_COMMENTS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_rated_at__c</fullName>
        <label>LAST_RATED_AT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>major_system__c</fullName>
        <label>MAJOR_SYSTEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mirror_action_requested__c</fullName>
        <label>MIRROR_ACTION_REQUESTED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modified_repos_commitid__c</fullName>
        <label>MODIFIED_REPOS_COMMITID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>new_cr_to_track_this_defect__c</fullName>
        <label>NEW_CR_TO_TRACK_THIS_DEFECT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>new_project_information__c</fullName>
        <label>NEW_PROJECT_INFORMATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opt_out__c</fullName>
        <label>OPT_OUT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pdo_it_sponsors_approval__c</fullName>
        <label>PDO_IT_SPONSORS_APPROVAL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone_component__c</fullName>
        <label>PHONE_COMPONENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pkey__c</fullName>
        <label>PKEY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>platform__c</fullName>
        <label>PLATFORM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prev_component_classification__c</fullName>
        <label>PREV_COMPONENT_CLASSIFICATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>previous_issue_ids__c</fullName>
        <label>PREVIOUS_ISSUE_IDS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primary_system__c</fullName>
        <label>PRIMARY_SYSTEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>priority__c</fullName>
        <label>PRIORITY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <label>PRODUCT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_dev_sponsor_approval__c</fullName>
        <label>PRODUCT_DEV_SPONSOR_APPROVAL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>program__c</fullName>
        <label>PROGRAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proj_version_label_fixed__c</fullName>
        <label>PROJ_VERSION_LABEL_FIXED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_category__c</fullName>
        <label>PROJECT_CATEGORY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_category_id__c</fullName>
        <label>PROJECT_CATEGORY_ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_key__c</fullName>
        <label>PROJECT_KEY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_name__c</fullName>
        <label>PROJECT_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_version__c</fullName>
        <label>PROJECT_VERSION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>propagation_handshake__c</fullName>
        <label>PROPAGATION_HANDSHAKE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>propagation_status_gerrit__c</fullName>
        <label>PROPAGATION_STATUS_GERRIT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>region__c</fullName>
        <label>REGION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>release_label__c</fullName>
        <label>RELEASE_LABEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>remote_site_location__c</fullName>
        <label>REMOTE_SITE_LOCATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reopen_reason__c</fullName>
        <label>REOPEN_REASON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>repo_classification__c</fullName>
        <label>REPO_CLASSIFICATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>repo_name__c</fullName>
        <label>REPO_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reporter__c</fullName>
        <label>REPORTER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reporter_coreid__c</fullName>
        <label>REPORTER_COREID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requested_delivery_date__c</fullName>
        <label>REQUESTED_DELIVERY_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>requested_project_gits_names__c</fullName>
        <label>REQUESTED_PROJECT_GITS_NAMES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>res1__c</fullName>
        <label>RES1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>res2__c</fullName>
        <label>RES2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>res3__c</fullName>
        <label>RES3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>resolution__c</fullName>
        <label>Resolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>root_cause_analysis__c</fullName>
        <label>ROOT_CAUSE_ANALYSIS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sa_risk_assessment__c</fullName>
        <label>SA_RISK_ASSESSMENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>secondary_system__c</fullName>
        <label>SECONDARY_SYSTEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>select_tlrb_committee_chair__c</fullName>
        <label>SELECT_TLRB_COMMITTEE_CHAIR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>severity__c</fullName>
        <label>SEVERITY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfdc_project_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SW Project</label>
        <referenceTo>JIRA_Project__c</referenceTo>
        <relationshipName>JIRA_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sme__c</fullName>
        <label>SME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sme_approver__c</fullName>
        <label>SME_APPROVER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sme_approver_coreid__c</fullName>
        <label>SME_APPROVER_COREID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sme_manager_core_id__c</fullName>
        <label>SME_MANAGER_CORE_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sme_name__c</fullName>
        <label>SME_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>software_metrics_owner__c</fullName>
        <label>SOFTWARE_METRICS_OWNER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>source_path_location__c</fullName>
        <label>SOURCE_PATH_LOCATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>source_site_location__c</fullName>
        <label>SOURCE_SITE_LOCATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>starting_risk__c</fullName>
        <label>STARTING_RISK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sub_component__c</fullName>
        <label>SUB_COMPONENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sw_version__c</fullName>
        <label>SW_VERSION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sw_version_integrated__c</fullName>
        <label>SW_VERSION_INTEGRATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>target_date__c</fullName>
        <label>TARGET_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>target_stable_release__c</fullName>
        <label>Target Stable Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>team_found__c</fullName>
        <label>TEAM_FOUND</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_act__c</fullName>
        <label>TEST_ACT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>test_bsln__c</fullName>
        <label>TEST_BSLN</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>test_case_result__c</fullName>
        <label>TEST_CASE_RESULT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_cwv__c</fullName>
        <label>TEST_CWV</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>unique_eccns_in_forest__c</fullName>
        <label>UNIQUE_ECCNS_IN_FOREST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unittest_fault_count__c</fullName>
        <label>UNITTEST_FAULT_COUNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>user_responsible_for_defect__c</fullName>
        <label>USER_RESPONSIBLE_FOR_DEFECT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>version_fixed_label__c</fullName>
        <label>VERSION_FIXED_LABEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>JIRA Link</label>
    <nameField>
        <label>JIRA Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JIRA Links</pluralLabel>
    <recordTypes>
        <fullName>Bus_Ops</fullName>
        <active>true</active>
        <label>Bus Ops</label>
    </recordTypes>
    <recordTypes>
        <fullName>Feature</fullName>
        <active>true</active>
        <label>Feature</label>
    </recordTypes>
    <recordTypes>
        <fullName>JIRA_Issue</fullName>
        <active>true</active>
        <description>Standard and non-specific issue type</description>
        <label>JIRA Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Plan</fullName>
        <active>true</active>
        <label>Plan</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>